--- a/Bibliotekarz/Bibliotekarz/Bibliotekarz/Bibliotekarz.csproj
+++ b/Bibliotekarz/Bibliotekarz/Bibliotekarz/Bibliotekarz.csproj
@@ -10,7 +10,17 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Bibliotekarz.Shared\Bibliotekarz.Shared.csproj" />
     <ProjectReference Include="..\Bibliotekarz.Client\Bibliotekarz.Client.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="9.0.10" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.*" />
+    <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.10" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.*" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="9.0.10">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
   </ItemGroup>
 
 </Project>
