--- a/Bibliotekarz/Bibliotekarz/Bibliotekarz/appsettings.json
+++ b/Bibliotekarz/Bibliotekarz/Bibliotekarz/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=BibliotekarzDb;Integrated Security=true;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
