Konfiguracja tokena JWT

--- a/Bibliotekarz/Bibliotekarz/Bibliotekarz/appsettings.json
+++ b/Bibliotekarz/Bibliotekarz/Bibliotekarz/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=BibliotekarzDb;Integrated Security=true;Trusted_Connection=true;TrustServerCertificate=true;MultipleActiveResultSets=true;"
   },
+  "Jwt": {
+    "Key": "super-tajny-klucz-dla-naszej-wspanialej-aplikacji-do-obslugi-biblioteki",
+    "Audience": "BlazorBooksClient",
+    "Issuer" :  "BlazorBooks"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
